Tests/CompilerTests/negative/missing-identifiers.package/src/main.hylo
fun f(a b, , d: true) {}
