Tests/CompilerTests/negative/missing-identifiers.package/src/main.expected
negative/missing-identifiers.package/src/main.hylo:1.11: error: expected parameter declaration
fun f(a b, , d: true) {}
          ^
